fixes for formatting

--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
             neque. Nullam sit amet fringilla massa.</p>
         </div>
 
-        <div class="column small">
+        <div class="column sub">
           <div class="article">
             <h1>Orca Spends Vacation at Land World Puget</h1>
             <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices
               purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi
               pulvinar ante accumsan...</p>
+              <br><br><br>
           </div>
 
           <div class="headline" id="backwards">
@@ -56,7 +57,7 @@
           </div>
         </div>
 
-        <div class="column small">
+        <div class="column sub">
           <div class="article">
             <h1>Burger for Breakfast: How Early is too Early?</h1>
             <p>Mew York, MYâInterdum et malesuada fames ac ante ipsum primis in
