--- a/index.html
+++ b/index.html
@@ -98,10 +98,21 @@
       <div class="column small">
         <img src="./Resources/img-news-bite.png" alt="">
         <div class="article">
-          <h3>News Bites</h3>
-          <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising
-            Ideas Advertising Internet Online Illustration in Marketing Materials
-            Finally a Top Secret Way You Can</p>
+          <h3>NEWS BITES</h3>
+          <span>Cat Emoji Goes Viral</span> <span>Buy Youtube Views</span>
+          <span>Home Business Advertising Ideas</span> <span>Advertising Internet
+            Online</span> <span>Illustration in Marketing Materials</span>
+            <span>Finally a Top Secret Way You Can</span>
+        </div>
+      </div>
+
+      <div class="footer">
+        <div id="MyTimes">
+          <span>MY Times</span><span>|</span><a href="#world">World</a><a href="#us">U.S.</a><a href="#Tech">Tech</a>
+          <a href="#science">Science</a>
+        </div>
+        <div id="copyright">
+          <span>© 2016, My Times (A Division of Codecademy bite)</span>
         </div>
       </div>
     </div> <!--End of content div-->
